--- a/index-en.html
+++ b/index-en.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script>
-      window.preferredLanguage = 'id';
+      window.preferredLanguage = 'en';
     </script>
     <script src="/data.js"></script>
     <script type="module" src="/src/main.jsx"></script>
